--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,22 +27,22 @@ services:
     ports:
       - "5432:5432"
 
-  worker:
-    # image: <>
-    build: ./Dockerfile.worker
-    environment: 
-      - CONF_FILE=conf.yaml
-    volumes: 
-      - ./conf.yaml:/api/conf.yaml
-    restart: unless-stopped
+  # worker:
+  #   # image: <>
+  #   build: ./Dockerfile.worker
+  #   environment: 
+  #     - CONF_FILE=conf.yaml
+  #   volumes: 
+  #     - ./conf.yaml:/api/conf.yaml
+  #   restart: unless-stopped
 
-  front:
-    # image: <>
-    build: ./Dockerfile.http_front
-    environment: 
-      - CONF_FILE=conf.yaml
-    ports :
-      - "5000:5000"
-    volumes: 
-      - ./conf.yaml:/api/conf.yaml
-    restart: unless-stopped
+  # front:
+  #   # image: <>
+  #   build: ./Dockerfile.http_front
+  #   environment: 
+  #     - CONF_FILE=conf.yaml
+  #   ports :
+  #     - "5000:5000"
+  #   volumes: 
+  #     - ./conf.yaml:/api/conf.yaml
+  #   restart: unless-stopped
