--- a/services/http_front/requirements.txt
+++ b/services/http_front/requirements.txt
@@ -1,7 +1,9 @@
-pika==1.2.0
 minio==7.1.0
+fastapi==0.68.0
+uvicorn==0.11.8
+
+# common
+pika==1.2.0
+PyYAML==5.3.1
 pony==0.7.13
 psycopg2-binary==2.8.6
-fastapi==0.68.0
-PyYAML==5.3.1
-uvicorn==0.11.8
