--- a/services/worker/requirements.txt
+++ b/services/worker/requirements.txt
@@ -1,11 +1,13 @@
 google-api-python-client==2.2.0
 google-auth-oauthlib==0.4.4
 google-auth-httplib2==0.1.0
-pika==1.2.0
 premailer==3.7.0
 Jinja2==3.0.3
 minio==7.1.0
 httplib2==0.15.0
+
+# common
 pony==0.7.13
 psycopg2-binary==2.8.6
 PyYAML==5.3.1
+pika==1.2.0
