--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -4,6 +4,7 @@ WORKDIR /api
 
 COPY ./services/worker/requirements.txt requirements.txt
 
+RUN apt update && apt install git
 RUN pip3 install -r requirements.txt
 
 COPY . .
